Updates for new format
Updates for new format

--- a/config.ini
+++ b/config.ini
@@ -1,14 +1,15 @@
 [io]
-fnames_features = C:\Projects\predictive-geology-maps\data\features_tif\Landsat8_RioMaria.tif 
-    C:\Projects\predictive-geology-maps\data\features_tif\RIO_MARIA_CT.tif 
-    C:\Projects\predictive-geology-maps\data\features_tif\RIO_MARIA_eTh.tif 
-    C:\Projects\predictive-geology-maps\data\features_tif\RIO_MARIA_eU.tif 
-    C:\Projects\predictive-geology-maps\data\features_tif\RIO_MARIA_GT.tif 
-    C:\Projects\predictive-geology-maps\data\features_tif\RIO_MARIA_K.tif 
-    C:\Projects\predictive-geology-maps\data\features_tif\RIO_MARIA_ThK.tif 
-    C:\Projects\predictive-geology-maps\data\features_tif\RIO_MARIA_ThU.tif 
-    C:\Projects\predictive-geology-maps\data\features_tif\RIO_MARIA_UK.tif 
-    C:\Projects\predictive-geology-maps\data\features_tif\SRTM-DEM_RioMaria.tif
-fname_target = C:\Projects\predictive-geology-maps\data\Litologia_Rio Maria_1_250.000\Litologia.shp
-fname_limit = C:\Projects\predictive-geology-maps\data\Arquivos_Geologia_1_100_000_Rio_Maria\sig_fazenda_rio_dourado\Fazenda Rio Dourado\Planimetria\reproject_Faz_Rio_Dourado_Limite_da_Folha_A.shp
-dir_out = C:\Projects\predictive-geology-maps\data\out
+fnames_features = C:\Projects\data\Amapa\features_tif\Landsat_AMAPA.tif 
+    C:\Projects\data\Amapa\features_tif\CT_JUNCAO_AMAPA_SIRGAS_22N.tif 
+    C:\Projects\data\Amapa\features_tif\eTh_JUNCAO_AMAPA_SIRGAS_22N.tif 
+    C:\Projects\data\Amapa\features_tif\eU_JUNCAO_AMAPA_SIRGAS_22N.tif 
+    C:\Projects\data\Amapa\features_tif\GT_JUNCAO_AMAPA_SIRGAS_22N.tif 
+    C:\Projects\data\Amapa\features_tif\Kperc_JUNCAO_AMAPA_SIRGAS_22N.tif 
+    C:\Projects\data\Amapa\features_tif\RzThK_JUNCAO_AMAPA_SIRGAS_22N.tif 
+    C:\Projects\data\Amapa\features_tif\RzThU_JUNCAO_AMAPA_SIRGAS_22N.tif 
+    C:\Projects\data\Amapa\features_tif\RzUK_JUNCAO_AMAPA_SIRGAS_22N.tif 
+    C:\Projects\data\Amapa\features_tif\SRTMAmapa.tif
+fname_target = C:\Projects\data\Amapa\feature_target\Litologia.shp
+fname_limit = C:\Projects\data\Amapa\limites\NA.22-V-B-II.shp
+fname_lab_conv = C:\Projects\data\Amapa\feature_target\SIGLA_UNID.csv
+dir_out = C:\Projects\data\Amapa\resultados\NA.22-V-B-II
