--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,13 @@
 [io]
-fnames_features = C:\Projects\data\Amapa\features_tif\Landsat_AMAPA.tif 
-    C:\Projects\data\Amapa\features_tif\CT_JUNCAO_AMAPA_SIRGAS_22N.tif 
-    C:\Projects\data\Amapa\features_tif\eTh_JUNCAO_AMAPA_SIRGAS_22N.tif 
-    C:\Projects\data\Amapa\features_tif\eU_JUNCAO_AMAPA_SIRGAS_22N.tif 
-    C:\Projects\data\Amapa\features_tif\GT_JUNCAO_AMAPA_SIRGAS_22N.tif 
-    C:\Projects\data\Amapa\features_tif\Kperc_JUNCAO_AMAPA_SIRGAS_22N.tif 
-    C:\Projects\data\Amapa\features_tif\RzThK_JUNCAO_AMAPA_SIRGAS_22N.tif 
-    C:\Projects\data\Amapa\features_tif\RzThU_JUNCAO_AMAPA_SIRGAS_22N.tif 
-    C:\Projects\data\Amapa\features_tif\RzUK_JUNCAO_AMAPA_SIRGAS_22N.tif 
+fnames_features = C:\Projects\data\Amapa\features_tif\Landsat_Ap.tif 
+    C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_CT.tif  
+    C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_eTh.tif 
+    C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_eU.tif  
+    C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_GT.tif  
+    C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_K.tif 
+    C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_ThK.tif 
+    C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_ThU.tif 
+    C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_UK.tif  
     C:\Projects\data\Amapa\features_tif\SRTMAmapa.tif
 fname_target = C:\Projects\data\Amapa\feature_target\Litologia.shp
 fname_limit = C:\Projects\data\Amapa\limites\NA.22-V-B-II.shp
