Update README.md and add resources

--- a/config.ini
+++ b/config.ini
@@ -1,15 +1,23 @@
 [io]
-fnames_features = C:\Projects\data\Amapa\features_tif\Landsat_Ap.tif 
-    C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_CT.tif  
-    C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_eTh.tif 
-    C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_eU.tif  
-    C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_GT.tif  
-    C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_K.tif 
-    C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_ThK.tif 
-    C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_ThU.tif 
-    C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_UK.tif  
-    C:\Projects\data\Amapa\features_tif\SRTMAmapa.tif
+# raster files (input features):
+fnames_features = C:\Projects\data\Amapa\features_tif\J_AMAPA_eTh.tif
+	C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_eU.tif
+	C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_GT.tif
+	C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_Kperc.tif
+	C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_ThK.tif
+	C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_ThU.tif
+	C:\Projects\data\Amapa\features_tif\JUNCAO_AMAPA_UK.tif
+	C:\Projects\data\Amapa\features_tif\JUNCAO_Ap_CT.tif
+	C:\Projects\data\Amapa\features_tif\Landsat_AP.tif
+	C:\Projects\data\Amapa\features_tif\srTm-Amapa.tif
+# vector file (geology, target)
 fname_target = C:\Projects\data\Amapa\feature_target\Litologia.shp
+# vector file (project boundary)
 fname_limit = C:\Projects\data\Amapa\limites\NA.22-V-B-II.shp
+# a SIGLA_UNID to integer "dictionary"
 fname_lab_conv = C:\Projects\data\Amapa\feature_target\SIGLA_UNID.csv
-dir_out = C:\Projects\data\Amapa\resultados\NA.22-V-B-II
+# folder where the results will be saved
+dir_out = C:\Projects\data\Amapa\resultados3
+
+
+
