--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,5 @@
 [io]
+# raster files (input features)
 fnames_features = C:\Projects\data\Norte_RR\features_tif\Landsat_ls8Mosaic_norteRR.tif
 	C:\Projects\data\Norte_RR\features_tif\RR_CT.tif
 	C:\Projects\data\Norte_RR\features_tif\RR_eTh.tif
@@ -8,9 +9,10 @@ fnames_features = C:\Projects\data\Norte_RR\features_tif\Landsat_ls8Mosaic_norte
 	C:\Projects\data\Norte_RR\features_tif\RR_ThK.tif
 	C:\Projects\data\Norte_RR\features_tif\RR_ThU.tif
 	C:\Projects\data\Norte_RR\features_tif\RR_UK.tif
-	C:\Projects\data\Norte_RR\features_tif\RR_Uth.tif
 	C:\Projects\data\Norte_RR\features_tif\srtm_norteRR.tif
+# vector file (geology, target)	
 fname_target = C:\Projects\data\Norte_RR\feature_target\Litologia.shp
+# vector file (project boundary)
 fname_limit = C:\Projects\data\Norte_RR\limites\NA-20-X-A-VI.gpkg
-dir_out = C:\Projects\data\Norte_RR\res2
-
+# folder where the results will be saved (path to empty folder)
+dir_out = C:\Projects\data\Norte_RR\results
