--- a/config.ini
+++ b/config.ini
@@ -1,18 +1,22 @@
 [io]
-# raster files (input features)
-fnames_features = C:\Projects\data\Norte_RR\features_tif\Landsat_ls8Mosaic_norteRR.tif
-	C:\Projects\data\Norte_RR\features_tif\RR_CT.tif
-	C:\Projects\data\Norte_RR\features_tif\RR_eTh.tif
-	C:\Projects\data\Norte_RR\features_tif\RR_eU.tif
-	C:\Projects\data\Norte_RR\features_tif\RR_GT.tif
-	C:\Projects\data\Norte_RR\features_tif\RR_Kperc.tif
-	C:\Projects\data\Norte_RR\features_tif\RR_ThK.tif
-	C:\Projects\data\Norte_RR\features_tif\RR_ThU.tif
-	C:\Projects\data\Norte_RR\features_tif\RR_UK.tif
-	C:\Projects\data\Norte_RR\features_tif\srtm_norteRR.tif
-# vector file (geology, target)	
-fname_target = C:\Projects\data\Norte_RR\feature_target\Litologia.shp
-# vector file (project boundary)
-fname_limit = C:\Projects\data\Norte_RR\limites\NA-20-X-A-VI.gpkg
-# folder where the results will be saved (path to empty folder)
-dir_out = C:\Projects\data\Norte_RR\results
+fnames_features = ..\data\sample_data\features_tif\Landsat_RO.tif
+	..\data\sample_data\features_tif\Rondonia_Geof_CT.tif
+	..\data\sample_data\features_tif\Rondonia_Geof_Kperc.tif
+	..\data\sample_data\features_tif\srtm300m.tif
+fname_target = ..\data\sample_data\target\Litologia.gpkg
+fname_limit = ..\data\sample_data\limit\limit.gpkg
+dir_out = ..\data\sample_data\tout-r1
+
+[options]
+target_field = SIGLA_UNID
+object_id = OBJECTID
+discard_less_than = 40
+max_samples_per_class = 150
+use_coords = False
+use_cartesian_prod = False
+run_pca = True
+pca_percent = 95
+
+[advanced]
+rand_num_seed = 1
+
